<resources>
    <string name="app_name">LearnCook</string>
    <!--strings del Login-->
    <string name="login_titulo">LearnCook</string>
    <string name="login_et_correo">Correo electrónico</string>
    <string name="login_et_contrasena">Contraseña</string>
    <string name="login_btn_inicio">Iniciar sesión</string>
    <string name="login_btn_registro">Registrarse</string>
    <string name="login_btn_olvidaste">¿Olvidaste tu contraseña?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home fragment</string>
</resources>