<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#FCFFDF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_titulo"
        android:fontFamily="@font/display"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textSize="40sp"
        android:textColor="#021D3D"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_et_correo"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:inputType="textCapWords|textAutoComplete"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#021D3D"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:id="@+id/et_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_et_contrasena"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:fontFamily="@font/roboto"
        android:textColorHint="#021D3D"
        android:background="@drawable/rounded_edittext"/>

    <TextView
        android:id="@+id/tw_recuperar_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_olvidaste"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:textSize="18sp"
        android:textColor="#2F4DE3"
        />

    <Button
        android:id="@+id/btn_ingreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_inicio"
        android:textSize="20sp"
        android:textColor="#021D3D"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <Button
        android:id="@+id/btn_Registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_registro"
        android:textSize="20sp"
        android:textColor="#021D3D"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
</LinearLayout>
